--- a/mail/themes/windows/mail/preferences/aboutPreferences.css
+++ b/mail/themes/windows/mail/preferences/aboutPreferences.css
@@ -8,6 +8,10 @@
   font-size: 1.25em;
 }
 
+radio[pane] > .radio-label-box {
+  font-size: 1.34rem;
+}
+
 .actionsMenu > .menulist-label-box > .menulist-icon {
   margin-inline-end: 9px;
 }
