Bug 1477636 - Follow-up: Hide the dialog icons in in-content prefs. r=jorgk a=jorgk

--- a/mail/themes/shared/mail/incontentprefs/aboutPreferences.css
+++ b/mail/themes/shared/mail/incontentprefs/aboutPreferences.css
@@ -121,6 +121,10 @@ radio[pane][focused="true"] > .radio-label-box {
   outline: none;
 }
 
+radio[pane] > .radio-label-box > .radio-icon {
+  display: none;
+}
+
 radio[pane] > .radio-label-box > .radio-label {
   margin: 0;
 }
