Bug 1972812 - Account Hub Address Book Create LDAP Directory. r=freaktechnik,aleca
**How to Test**
- Open AH Address Book setup (flip pref if not already on)
- Click Create LDAP Directory
- Input the following information and click continue to create the directory and view it
```
Hostname: ldap.forumsys.com
Port: 389
Bind dn: cn=read-only-admin,dc=example,dc=com
Search filter: (objectclass=*)
Login: simple
```

Differential Revision: https://phabricator.services.mozilla.com/D257791

--- a/mail/components/accountcreation/test/browser/files/accountHubAddressBook.xhtml
+++ b/mail/components/accountcreation/test/browser/files/accountHubAddressBook.xhtml
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:xul="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
+>
   <head>
     <meta charset="utf-8" />
     <title>Account Hub Address Book Test</title>
@@ -656,6 +659,115 @@
                 class="form-icon icon-success input-success"
               />
             </div>
+          </div>
+          <div class="input-cell narrow advanced-input">
+            <label
+              for="maxResults"
+              data-l10n-id="account-hub-max-results-label"
+            >
+            </label>
+            <div class="input-control">
+              <input
+                id="maxResults"
+                type="number"
+                min="1"
+                max="2147483647"
+                class="input-field number-input"
+                aria-invalid="false"
+              />
+              <img
+                src=""
+                alt=""
+                class="form-icon icon-danger input-warning"
+              />
+              <img
+                src=""
+                alt=""
+                class="form-icon icon-success input-success"
+              />
+              <span
+                id="maxResultsErrorMessage"
+                class="input-error-message"
+                data-l10n-id="account-hub-max-results-error-text"
+              >
+              </span>
+            </div>
+          </div>
+          <div class="input-cell expanded advanced-input">
+            <label
+              for="scope"
+              data-l10n-id="account-hub-address-book-scope-label"
+              data-l10n-attrs="accesskey"
+            >
+            </label>
+            <div class="input-control">
+              <xul:menulist
+                id="scope"
+                class="menulist"
+                data-l10n-id="account-hub-address-book-scope-subtree-label"
+                value="2"
+                flex="1"
+              >
+                <xul:menupopup
+                  id="scopeMenupopup"
+                  class="menupopup"
+                  position="after_start"
+                >
+                  <xul:menuitem
+                    id="scopeOne"
+                    data-l10n-id="account-hub-address-book-scope-level-one-label"
+                    value="1"
+                  />
+                  <xul:menuitem
+                    id="scopeSubtree"
+                    data-l10n-id="account-hub-address-book-scope-subtree-label"
+                    value="2"
+                  />
+                </xul:menupopup>
+              </xul:menulist>
+            </div>
+          </div>
+          <div class="input-cell full advanced-input">
+            <label
+              for="loginMethod"
+              data-l10n-id="account-hub-address-book-login-method-label"
+              data-l10n-attrs="accesskey"
+            >
+            </label>
+            <div class="input-control">
+              <xul:menulist
+                id="loginMethod"
+                class="menulist"
+                data-l10n-id="account-hub-address-book-login-simple-label"
+                value=""
+                flex="1"
+              >
+                <xul:menupopup
+                  id="loginMethodMenupopup"
+                  class="menupopup"
+                  position="after_start"
+                >
+                  <xul:menuitem
+                    id="loginSimple"
+                    data-l10n-id="account-hub-address-book-login-simple-label"
+                    value=""
+                  />
+                  <xul:menuitem
+                    id="loginGSSAPI"
+                    label="Kerberos (GSSAPI)"
+                    value="GSSAPI"
+                  />
+                </xul:menupopup>
+              </xul:menulist>
+            </div>
+          </div>
+          <div class="input-cell full advanced-input">
+            <label
+              for="search"
+              data-l10n-id="account-hub-address-book-search-label"
+            >
+            </label>
+            <textarea id="search" class="input-textarea"></textarea>
           </div>
           <button
             id="advancedConfigurationLdap"
