--- a/mail/themes/shared/mail/variables.css
+++ b/mail/themes/shared/mail/variables.css
@@ -129,6 +129,8 @@
 
   --tabline-color: var(--selected-item-color);
 
+  --drop-indicator-z-index: 3;
+
   /* LW-themes enabled */
 
   &[lwtheme] {
