Bug 1985147 - Use the mail secure icon for EWS accounts in popup and folders. r=tobyp
Apply the correct email envelope icon to EWS accounts:
- Get Messages right click menu popup in folder pane.
- Get Messages right click menu popup in unified toolbar.
- Folder pane.

Differential Revision: https://phabricator.services.mozilla.com/D262489

--- a/mail/themes/shared/mail/about3Pane.css
+++ b/mail/themes/shared/mail/about3Pane.css
@@ -273,11 +273,11 @@ body {
       --icon-color: var(--primary);
     }
 
-    &:is([data-server-type="imap"], [data-server-type="pop3"]) > .container > .icon {
+    &:is([data-server-type="imap"], [data-server-type="pop3"], [data-server-type="ews"]) > .container > .icon {
       background-image: var(--icon-mail);
     }
 
-    &:is([data-server-type="imap"], [data-server-type="pop3"])[data-server-secure="true"]
+    &:is([data-server-type="imap"], [data-server-type="pop3"], [data-server-type="ews"])[data-server-secure="true"]
       > .container > .icon {
       background-image: var(--icon-mail-secure);
     }
