--- a/mail/themes/shared/mail/about3Pane.css
+++ b/mail/themes/shared/mail/about3Pane.css
@@ -285,7 +285,7 @@ body {
       & > .status-icon {
         display: unset;
         background-image: var(--icon-warning);
-        color: var(--color-text-critical);
+        color: var(--folder-color-warning);
       }
     }
 
