Bug 1987033 - Break up mailWidgets.js. r=mkmelin
Differential Revision: https://phabricator.services.mozilla.com/D263822

--- a/mail/components/compose/content/dialogs/EdAdvancedEdit.xhtml
+++ b/mail/components/compose/content/dialogs/EdAdvancedEdit.xhtml
@@ -66,6 +66,10 @@
       defer="defer"
       src="chrome://messenger/content/messengercompose/EdAdvancedEdit.js"
     ></script>
+    <script
+      type="module"
+      src="chrome://messenger/content/menulist-editable.mjs"
+    ></script>
   </head>
   <html:body
     xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
