--- a/mail/components/compose/content/messengercompose.xhtml
+++ b/mail/components/compose/content/messengercompose.xhtml
@@ -96,7 +96,10 @@
   <script defer="defer" src="chrome://openpgp/content/ui/enigmailMsgComposeOverlay.js"></script>
   <script defer="defer" src="chrome://openpgp/content/ui/commonWorkflows.js"></script>
   <script defer="defer" src="chrome://openpgp/content/ui/keyAssistant.js"></script>
+  <script type="module" src="chrome://messenger/content/attachment-list.mjs"></script>
   <script type="module" src="chrome://messenger/content/drop-indicator.mjs"></script>
+  <script type="module" src="chrome://messenger/content/menulist-editable.mjs"></script>
+  <script type="module" src="chrome://messenger/content/messengercompose/composeWidgets.mjs"></script>
 </head>
 <html:body xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
 
