Bug 1985424 - Use moz-src for components/downloads. r=mkmelin
Differential Revision: https://phabricator.services.mozilla.com/D262736

--- a/mail/components/downloads/content/aboutDownloads.xhtml
+++ b/mail/components/downloads/content/aboutDownloads.xhtml
@@ -17,7 +17,7 @@
   <title>&aboutDownloads.title;</title>
   <script defer="defer" src="chrome://messenger/content/globalOverlay.js"></script>
   <script defer="defer" src="chrome://global/content/editMenuOverlay.js"></script>
-  <script defer="defer" src="chrome://messenger/content/downloads/aboutDownloads.js"></script>
+  <script defer="defer" src="moz-src:///comm/mail/components/downloads/content/aboutDownloads.js"></script>
   <meta http-equiv="Content-Security-Policy" content="default-src chrome:; img-src chrome: moz-icon:; object-src 'none'; script-src chrome: 'unsafe-inline' moz-src:" />
   <meta name="color-scheme" content="light dark" />
   <link rel="stylesheet" href="chrome://global/skin/global.css" />
