Bug 1988374 - Replace the down chevron icon with a kebab icon in the more button. r=freaktechnik
This also fixes the inconsistency of showing the chevron even when the user chooses to only show text buttons

Differential Revision: https://phabricator.services.mozilla.com/D264703

--- a/mail/themes/shared/mail/messageHeader.css
+++ b/mail/themes/shared/mail/messageHeader.css
@@ -160,10 +160,6 @@ mail-tagfield[collapsed] {
 
 /* ::::: msg header buttons ::::: */
 
-#otherActionsButton > .toolbarbutton-icon {
-  display: none;
-}
-
 .message-header-view-button {
   flex-direction: row;
   min-width: 24px;
@@ -244,6 +240,10 @@ mail-tagfield[collapsed] {
 
 .hdrTrashButton {
   list-style-image: var(--icon-trash);
+}
+
+.hdrMoreButton {
+  list-style-image: var(--icon-kebab);
 }
 
 #attachmentSaveAllSingle,
