Bug 1983560 - Update about-support to use moz-src. r=mkmelin
Differential Revision: https://phabricator.services.mozilla.com/D261409

--- a/mail/components/about-support/content/aboutSupport.xhtml
+++ b/mail/components/about-support/content/aboutSupport.xhtml
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="chrome://messenger/skin/aboutSupport.css"
           type="text/css"/>
 <!-- End of TB addition -->
-    <script src="chrome://messenger/content/about-support/aboutSupport.js"/>
+    <script src="moz-src:///comm/mail/components/about-support/content/aboutSupport.js"/>
     <link rel="localization" href="branding/brand.ftl"/>
     <link rel="localization" href="toolkit/about/aboutSupport.ftl"/>
     <link rel="localization" href="toolkit/global/resetProfile.ftl"/>
@@ -34,11 +34,11 @@
     <link rel="localization" href="messenger/aboutSupportMail.ftl"/>
     <link rel="localization" href="messenger/aboutSupportCalendar.ftl"/>
     <link rel="localization" href="messenger/aboutSupportChat.ftl"/>
-    <script src="chrome://messenger/content/about-support/accounts.js"/>
-    <script src="chrome://messenger/content/about-support/calendars.js"/>
-    <script src="chrome://messenger/content/about-support/chat.js"/>
-    <script src="chrome://messenger/content/about-support/libs.js"/>
-    <script src="chrome://messenger/content/about-support/export.js"/>
+    <script src="moz-src:///comm/mail/components/about-support/content/accounts.js"/>
+    <script src="moz-src:///comm/mail/components/about-support/content/calendars.js"/>
+    <script src="moz-src:///comm/mail/components/about-support/content/chat.js"/>
+    <script src="moz-src:///comm/mail/components/about-support/content/libs.js"/>
+    <script src="moz-src:///comm/mail/components/about-support/content/export.js"/>
 <!-- End of TB addition -->
   </head>
 
