Bug 1973543 - Account Hub: Owl install should show link to website. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D254711

--- a/mail/components/accountcreation/templates/accountHubEmailConfigFoundTemplate.inc.xhtml
+++ b/mail/components/accountcreation/templates/accountHubEmailConfigFoundTemplate.inc.xhtml
@@ -91,15 +91,16 @@
                 </div>
 
                 <!-- Install Add-on Text -->
-                <div id="owlExchangeDescription" class="owl-exchange-text" hidden="hidden">
-                  <p id="addonInfo"
-                     class="install-addon"
-                     data-l10n-id="account-hub-addon-install-needed">
-                    <a id="addonInstall"
-                       data-l10n-name="addon-install"
-                       class="link">
-                    </a>
+                <div id="owlExchangeDescription" class="owl-exchange-section" hidden="hidden">
+                  <p>
+                    <img id="addonIcon" class="addon-icon" />
+                    <a id="addonInfo" class="addon-info link"></a>
                   </p>
+                  <button id="addonInstall"
+                          class="install-addon-button button button-sm primary-button"
+                          type="button"
+                          data-l10n-id="account-setup-addon-install-title">
+                  </button>
                 </div>
               </div>
               <div class="config-column" id="outgoingConfig" hidden="hidden">
