--- a/mail/themes/shared/mail/accountHubForms.css
+++ b/mail/themes/shared/mail/accountHubForms.css
@@ -29,7 +29,7 @@ form {
     width: 16px;
     height: 16px;
     border: 1px solid var(--color-surface-border-intense);
-    border-radius: 4px;
+    border-radius: var(--border-radius-small);
     appearance: none;
     background-color: var(--color-surface-lower);
 
@@ -101,7 +101,7 @@ form {
     background: var(--color-surface-subtle);
     border: 1px solid var(--color-surface-border);
     margin-block: 4px;
-    border-radius: 2px;
+    border-radius: var(--border-radius-xsmall);
     color: var(--hub-select-color);
     font-weight: 400;
   }
@@ -160,7 +160,7 @@ form {
 
     &.number-input {
       padding-inline-end: 0;
-      border-radius: 4px;
+      border-radius: var(--border-radius-small);
       border-width: 1px;
 
       &::-moz-number-spin-box {
@@ -536,7 +536,7 @@ div:has(legend) {
         width: 15px;
         height: 15px;
         border: 1px solid var(--color-surface-border-intense);
-        border-radius: 50%;
+        border-radius: var(--border-radius-circle);
         display: grid;
         place-content: center;
 
@@ -544,7 +544,7 @@ div:has(legend) {
           content: "";
           width: 5px;
           height: 5px;
-          border-radius: 50%;
+          border-radius: var(--border-radius-circle);
           transform: scale(0);
           box-shadow: inset 1em 1em var(--color-surface-base);
         }
@@ -717,16 +717,25 @@ div:has(legend) {
     }
   }
 
-  & .owl-exchange-text {
-    padding: 10px;
+  & .owl-exchange-section {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    padding: 9px;
+
     background-color: var(--color-warning-soft);
     border: 1px solid var(--color-text-warning);
     color: var(--color-text-warning);
     font-size: 0.9rem;
     border-radius: 5px;
-
-    & .install-addon {
-      margin: 0;
+    & p {
+      display: flex;
+      gap: 6px;
+      align-items: center;
+      margin-block: 0;
+    }
+    & .install-addon-button {
+      align-self: end;
     }
   }
 }
@@ -737,7 +746,7 @@ div:has(legend) {
   display: flex;
   flex-direction: column;
   border: 1px solid var(--color-surface-border);
-  border-radius: 8px;
+  border-radius: var(--border-radius-medium);
   height: 240px;
   font-size: 1.1rem;
   margin: 0;
@@ -755,7 +764,7 @@ div:has(legend) {
     font-weight: bold;
     background-color: var(--color-surface-lower);
     border-bottom: 1px solid var(--color-surface-border);
-    border-radius: 8px 8px 0 0;
+    border-radius: var(--border-radius-medium) var(--border-radius-medium) 0 0;
 
     & .sync-details {
       display: flex;
