Bug 1831713 - Fix 'Spam' button to update its state to 'Not Spam' if applicable. r=arschmitz
Differential Revision: https://phabricator.services.mozilla.com/D266813

--- a/mail/components/unifiedtoolbar/content/unifiedToolbarCustomizableItems.inc.xhtml
+++ b/mail/components/unifiedtoolbar/content/unifiedToolbarCustomizableItems.inc.xhtml
@@ -146,8 +146,7 @@
 
 <html:template id="junkTemplate"
                xmlns="http://www.w3.org/1999/xhtml">
-  <button is="mail-tab-button"
-          command="cmd_markAsJunk"
+  <button is="spam-button"
           label-id="toolbar-spam-label"
           data-l10n-id="toolbar-spam"></button>
 </html:template>
