--- a/mail/components/unifiedtoolbar/content/unifiedToolbarWebextensions.css
+++ b/mail/components/unifiedtoolbar/content/unifiedToolbarWebextensions.css
@@ -10,10 +10,8 @@
   margin-inline: 1px;
   content: var(--webextension-toolbar-image, inherit);
 
-  @media not (-moz-native-theme) {
-    @media (prefers-color-scheme: light) {
-      content: var(--webextension-toolbar-image-dark, inherit);
-    }
+  :root[lwtheme] & {
+    content: var(--webextension-toolbar-image-dark, inherit);
   }
 
   @media (prefers-color-scheme: dark) {
